whisply-rs/tui/src/snapshots/whisply_tui__keymap_setup__tests__keymap_debug_view_initial.snap
---
source: tui/src/keymap_setup.rs
expression: "render_debug(&view, 80)"
---
Keypress Inspector
Press any key to see what Whisply receives. Esc is inspected; Ctrl+C closes.
Tip: Whisply can only inspect keys your terminal sends.

Waiting for a keypress...
